@@ -165,11 +165,6 @@ of 400 or greater are viewed as invalid.</p>
     <td valign="top">The full URL of the page to request. The web server must
       return a status code of &lt;<tt>errorsBeginAt</tt></td>
     <td align="center">Yes.</td>
-    <td valign="top">errorsBeginAt</td>
-    <td valign="top">The lowest HTTP response code that signals an error;
-    by default '400'; server errors, not-authorized, not-found and the like 
-    are detected</td>
-    <td align="center">No</td>
   </tr>
   <tr>
     <td valign="top">errorsBeginAt</td>
