@@ -63,6 +63,8 @@ Fixed bugs:
 * <xmlvalidate> ignored the specified encoding of the files to
   validate.
 
+* the errorsbeginat attribute of the <http> condition didn't work.
+
 Other changes:
 --------------
 * The filesetmanifest attribute of <jar> has been reenabled.
